--- a/mongo.yml
+++ b/mongo.yml
@@ -23,10 +23,10 @@ spec:
         - name: MONGO_INITDB_ROOT_USERNAME
           valueFrom:
             secretKeyRef:
-              key: mongodb-secret
-              value: mongo-root-username
+              name: mongodb-secret
+              key: mongo-root-username
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
-            secretKeyRef:
-              key: mongodb-secret
-              value: mongo-root-password
+          secretKeyRef:
+            name: mongodb-secret
+            key: mongo-root-password
