--- a/mongo.yml
+++ b/mongo.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: mongodb
-        image: mongo
+        image: mongo:lts
         ports:
         - containerPort: 27017
         env:
