puing deployment and scret file

--- a/mongo.yml
+++ b/mongo.yml
@@ -30,3 +30,17 @@ spec:
               secretKeyRef:
                 name: mongodb-secret
                 key: mongo-root-password
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-service
+  namespace: default
+spec:
+  selector:
+    app: mongodb
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port:  27017
+      targetPort: 27017
