--- a/mongo-express.yaml
+++ b/mongo-express.yaml
@@ -31,4 +31,9 @@ spec:
                 name: mongodb-secret
                 key: mongo-root-password
         - name: ME_CONFIG_MONGODB_SERVER
+          valueFrom:
+              configMapKeyRef:
+                name: mongodb-config
+                key: database_url
+
          
