--- a/mongo-express.yaml
+++ b/mongo-express.yaml
@@ -35,5 +35,18 @@ spec:
               configMapKeyRef:
                 name: mongodb-config
                 key: database_url
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo-express
+spec:
+  selector:
+    app: mongo-express
+  type: LoadBalancer
+  ports:
+    - protocol: TCP
+      port: 8081
+      targetPort: 8081
+      nodePort: 30100
          
